Something in the way she knows

--- a/index.less
+++ b/index.less
@@ -54,7 +54,7 @@
   }
 
   .constant.numeric {
-    color: #836FCD;
+    color: #FE337E;
   }
 
   .constant.language {
@@ -70,7 +70,7 @@
   }
 
   .keyword {
-    color: #FE681F;
+    color: #E7AF28;
   }
 
   .storage {
