--- a/index.less
+++ b/index.less
@@ -1,3 +1,5 @@
+/* wfewgfweg¡€#¢∞§¶•ªºø^¨¥†®´∑œ∑ß•••••••••*/
+
 .editor {
   .wrap-guide {
     background: rgba(182, 178, 176, 0.15);
@@ -34,11 +36,12 @@
   }
 
   &.is-focused .selection .region {
-    background-color: #49483E;
+    background-color: #343b3e;
   }
 
   &.is-focused .line-number.cursor-line-no-selection {
-    background-color: #49483E;
+    color: #b7d6e7;
+    background-color: #343b3e;
   }
 
   .invisible-character {
@@ -50,7 +53,7 @@
   }
 
   .string {
-    color: #64BCA9;
+    color: #B8C53F;
   }
 
   .constant.numeric {
@@ -74,12 +77,11 @@
   }
 
   .storage {
-    color: #FE337E;
+    color: #87C2E3;
   }
 
   .storage.type {
     font-style: italic;
-    color: #87C2E3;
   }
 
   .entity.name.class {
@@ -110,12 +112,18 @@
     color: #E7AF28;
   }
 
+  .css.selector .tag,
+  .css.selector .class,
+  .css.selector .attribute-selector {
+    color: #B8C53F;
+  }
+
   .entity.other.attribute-name {
     color: #B8C53F;
   }
 
   .support.function {
-    color: #87C2E3;
+    color: #64BCA9;
   }
 
   .support.constant {
